[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["TNH <sdcard11291@trustnhope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pymysql = "^1.1.1"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
